--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -1,8 +1,12 @@
+
 html,body
 {
-  width:  100%;
-  height: 100%;
-  margin: 0;
+	overflow-x: hidden;
+	width:  100%;
+	height: 100%;
+	margin: 0;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
 }
 .imginicio
 {
