--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,6 +75,10 @@
   -fx-background-color: #6ff9ff;
 }
 
+.list-cell:focused {
+  -fx-background-color: #6fe2ff;
+}
+
 .tree-cell:hover{
 	-fx-background-color:#cdfafa;
 }
@@ -101,7 +105,9 @@
 	-fx-font-size: 11.0px;
 	-fx-font-weight: bold;
 	-fx-border-radius: 2px 2px 2px 2px;
+
 }
+
 
 .menu-button .label{
 	-fx-background-color: #bdbdbd;
@@ -163,14 +169,6 @@
 
 #loginLabels {
 	-fx-font-weight: bold;
-}
-
-.choice-box {
-    -fx-pref-width: 100;
-}
-
-.choice-box .menu-item > .label {
-    -fx-pref-width: 100;
 }
 
 .list-cell:disabled {
