--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,7 +75,7 @@
   -fx-background-color: #6ff9ff;
 }
 
-.list-cell:focused {
+.list-view-class .list-cell:focused {
   -fx-background-color: #6fe2ff;
 }
 
