--- a/resources/view/Welcome.fxml
+++ b/resources/view/Welcome.fxml
@@ -140,8 +140,8 @@
          </font></Label>
       <GridPane layoutX="310.0" layoutY="115.0" prefHeight="55.0" prefWidth="350.0">
         <columnConstraints>
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="164.0" minWidth="10.0" prefWidth="103.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="237.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="164.0" minWidth="10.0" prefWidth="103.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="237.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
