--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -1,8 +1,6 @@
 
 html,body
 {
-	overflow-y: hidden;
-	overflow-x: hidden;
 	width:  100%;
 	height: 100%;
 	margin: 0;
@@ -17,32 +15,11 @@ html,body
 	margin: auto;
 	padding: 10% 0;
 }
-
-.card
-{
-	display: none;
-	padding: 10% 0;
-	margin: auto;
-	text-align: center;
-}
-
-.cardText
-{
-	display: inline-block;
-	margin: auto;
-	padding: 10px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-   	text-align: center;
-   	font-size: 20px;
-   	font-weight: bold;
-}
-	
-.table_div
-{
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
-	width: 98%;
+#tabulatorDiv{
+    background-color:rgba(0, 0, 0, 0);
+    border-color:rgba(0, 0, 0, 0);
+	padding-top: 20px;
+	height: "95%",
 }
 
 .actividades
