--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -1,6 +1,7 @@
 
 html,body
 {
+	overflow-x:hidden;
 	width:  100%;
 	height: 100%;
 	margin: 0;
@@ -16,11 +17,29 @@ html,body
 	padding: 10% 0;
 }
 #tabulatorDiv{
-    background-color:rgba(0, 0, 0, 0);
-    border-color:rgba(0, 0, 0, 0);
-	padding-top: 20px;
+	padding-top:20px;
+    background-color:transparent;
+    border-color:transparent;
+}
+ /* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+} 
 .actividades
 {
 }
