--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,13 +34,20 @@
 	-fx-background-radius: 2px;
 	-fx-effect: dropshadow( gaussian , rgba(0,0,0,0.4) , 10,0,2,2 ); 
 }
-
+.danger_button{
+	-fx-background-color: #DC143C;
+}
 .button:hover{
 	-fx-background-color: #6ff9ff;
 	-fx-scale-y: 1.1;
 }
 
-.button:pressed {
+.danger_button:hover{
+	-fx-background-color: #eb1f48;
+	-fx-scale-y: 1.1;
+}
+
+.button .danger_button :pressed {
     -fx-scale-y: 0.9;
     -fx-scale-x: 0.9;
 }
