--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -2,28 +2,28 @@
 html,body
 {
 	overflow-x:hidden;
-	width:  100%;
-	height: 100%;
-	margin: 0;
+	width:  100.0%;
+	height: 100.0%;
+	margin: 0.0;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 }
 .imginicio
 {
-	height: 350px;
-	width: 350px;
+	height: 350.0px;
+	width: 350.0px;
 	display: block;
 	margin: auto;
-	padding: 10% 0;
+	padding: 10.0% 0.0;
 }
 #tabulatorDiv{
-	padding-top:20px;
+	padding-top:20.0px;
     background-color:transparent;
     border-color:transparent;
 }
  /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 10.0px;
 }
 
 /* Track */
@@ -77,65 +77,66 @@ html,body
 	
 .chart-container
 {
-	height:88%;
-	width: 95%;
-	margin:2%;
+	height:88.0%;
+	width: 95.0%;
+	margin:2.0%;
 	display: none;
 }
 	
 .controles{
 	position: relative;
-	width: 100%;
+	width: 100.0%;
 	background-color: #f2f2f2;
 	display: inline-block;
 }
 
 .opciones {
-	height: 30px;
 	position: relative;
 	display: inline-block;
 }
 	
 .opciones .btn {
-	height: 100%;
+	height: 100.0%;
 	background-color: transparent;
 	border: none;
-	box-shadow: inset 0 -3px 0px 0px #25c5d8;
+	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 	color: #000000;
-	font-size: 14px;
+	font-size: 14.0px;
 	font-weight: bold;
 	cursor: pointer;
-	padding-left: 22px;
+	padding-left: 22.0px;
 	background-image: url(./../img/visibility_off.png);
 	background-repeat: no-repeat;
-	background-position: center left 2px;
-	margin-right: 2px;
+	background-position: center left 2.0px;
+	margin: 2.0px;
 }
 
 .opciones .btn:hover {
-	box-shadow: inset 0 -4px 0px 0px #25c5d8;
+	box-shadow: inset 0.0 -4.0px 0.0px 0.0px #25c5d8;
 }
 	
 .pestañas {
+	
 	position: relative;
 	display: inline-block;
-	padding-right: 2px;
+	padding-right: 2.0px;
 }
 
 .pestañas .btn {
-	height: 100%;
+	height: 100.0%;
 	background-color: #f2f2f2;
 	border: none;
 	color: #000000;
-	font-size: 14px;
+	font-size: 14.0px;
 	font-weight: bold;
 	cursor: pointer;
+	margin: 2.0px;
 }
 .pestañas .btn:hover {
 	background-color:  #f2f2f2;
-	box-shadow: inset 0 -3px 0px 0px #25c5d8;
+	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 }
 input[type="button"][disabled] {
 	background-color:  #f2f2f2;
-	box-shadow: inset 0 -3px 0px 0px #25c5d8;
+	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 }
