--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.web.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -15,20 +9,24 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.web.WebView?>
+<?import org.controlsfx.control.CheckComboBox?>
 
-<BorderPane fx:id="canvas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<BorderPane fx:id="canvas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
 	<top>
 		<GridPane id="topBar" BorderPane.alignment="CENTER">
 			<columnConstraints>
@@ -54,6 +52,7 @@
 						<Menu mnemonicParsing="false" text="%menu.edit">
 							<items>
 								<MenuItem fx:id="MIClearSelection" mnemonicParsing="false" onAction="#clearSelection" text="%menu.clearselection" />
+                        <MenuItem fx:id="menuChangeConfig" mnemonicParsing="false" onAction="#changeConfiguration" text="%menu.changeconfig" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="false" text="%menu.help">
@@ -103,10 +102,10 @@
 												<TextField fx:id="tfdParticipants" layoutX="6.0" layoutY="31.0" prefHeight="25.0" prefWidth="100.0" promptText="%label.filter" />
 												<Label layoutX="115.0" layoutY="35.0" text="%label.group" />
 												<Label layoutX="135.0" layoutY="5.0" text="%label.rol" />
-												<ChoiceBox fx:id="slcRole" layoutX="160.0" layoutY="5.0" maxWidth="88.0" minHeight="25.0" minWidth="88.0" prefHeight="25.0" />
-												<ChoiceBox fx:id="slcGroup" layoutX="160.0" layoutY="35.0" maxWidth="88.0" minHeight="25.0" minWidth="88.0" prefHeight="25.0" />
-                                    <ChoiceBox fx:id="slcActivity" layoutX="160.0" layoutY="65.0" maxWidth="88.0" minHeight="25.0" minWidth="88.0" prefHeight="25.0" />
                                     <Label layoutX="48.0" layoutY="67.0" text="%label.activity" />
+                                    <CheckComboBox fx:id="checkComboBoxRole" layoutX="167.0" layoutY="-1.0" maxHeight="31.0" prefHeight="31.0" prefWidth="88.0" />
+                                    <CheckComboBox fx:id="checkComboBoxGroup" layoutX="167.0" layoutY="31.0" maxHeight="31.0" prefHeight="31.0" prefWidth="88.0" />
+                                    <CheckComboBox fx:id="checkComboBoxActivity" layoutX="167.0" layoutY="64.0" maxHeight="31.0" prefHeight="31.0" prefWidth="88.0" />
 											</children>
 										</Pane>
 									</top>
@@ -205,7 +204,7 @@
 																			<children>
 																				<TextField fx:id="courseModuleTextField" layoutX="6.0" layoutY="28.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
                                                             <CheckBox fx:id="checkBoxCourseModule" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
-                                                            <ChoiceBox fx:id="choiceBoxCourseModule" layoutX="140.0" layoutY="30.0" prefWidth="150.0" />
+                                                            <ChoiceBox fx:id="choiceBoxCourseModule" layoutX="140.0" layoutY="30.0" prefHeight="24.0" prefWidth="88.0" />
                                                             <CheckBox fx:id="checkBoxActivityCompleted" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" selected="true" text="%label.withcompletion" />
 																			</children>
 																		</Pane>
@@ -260,13 +259,26 @@
 							</rowConstraints>
 							<children>
 								<ChoiceBox fx:id="choiceBoxDate" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
-								<DatePicker fx:id="datePickerStart" editable="false" showWeekNumbers="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-								<Label text="%label.startdate" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-								<Label text="%label.enddate" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
 								<Label text="%label.groupbydate" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-								<DatePicker fx:id="datePickerEnd" editable="false" showWeekNumbers="true" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 								<Label text="%label.setMax" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
 								<TextField fx:id="textFieldMax" maxWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <GridPane fx:id="dateGridPane" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="3">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="104.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="120.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+      								<Label text="%label.startdate" GridPane.halignment="RIGHT" />
+      								<DatePicker fx:id="datePickerStart" showWeekNumbers="true" GridPane.columnIndex="1" />
+      								<Label text="%label.enddate" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+      								<DatePicker fx:id="datePickerEnd" showWeekNumbers="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                           </children>
+                        </GridPane>
 							</children>
 							<BorderPane.margin>
 								<Insets />
