--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -99,20 +99,6 @@
 						<SplitPane fx:id="splitPaneLeft" dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
 							<items>
 								<BorderPane prefHeight="200.0" prefWidth="200.0">
-									<top>
-										<Pane minHeight="64.0" prefHeight="93.0" prefWidth="392.0" BorderPane.alignment="CENTER">
-											<children>
-												<Label fx:id="lblCountParticipants" layoutX="6.0" layoutY="6.0" text="%label.participants" />
-												<TextField fx:id="tfdParticipants" layoutX="6.0" layoutY="31.0" prefHeight="25.0" prefWidth="100.0" promptText="%label.filter" />
-												<Label layoutX="115.0" layoutY="35.0" text="%label.group" />
-												<Label layoutX="135.0" layoutY="5.0" text="%label.rol" />
-                                    <Label layoutX="48.0" layoutY="67.0" text="%label.activity" />
-                                    <CheckComboBox fx:id="checkComboBoxRole" layoutX="167.0" layoutY="-1.0" maxHeight="31.0" prefHeight="31.0" prefWidth="88.0" />
-                                    <CheckComboBox fx:id="checkComboBoxGroup" layoutX="167.0" layoutY="31.0" maxHeight="31.0" prefHeight="31.0" prefWidth="88.0" />
-                                    <CheckComboBox fx:id="checkComboBoxActivity" layoutX="167.0" layoutY="64.0" maxHeight="31.0" prefHeight="31.0" prefWidth="88.0" />
-											</children>
-										</Pane>
-									</top>
 									<center>
 										<ListView fx:id="listParticipants" prefHeight="200.0" prefWidth="200.0" styleClass="list-view-class" BorderPane.alignment="CENTER">
 											<placeholder>
@@ -121,6 +107,30 @@
 										</ListView>
 
 									</center>
+                           <top>
+                              <GridPane BorderPane.alignment="CENTER">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="NEVER" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+												<Label fx:id="lblCountParticipants" text="%label.participants" GridPane.hgrow="NEVER" />
+												<TextField fx:id="tfdParticipants" promptText="%label.filter" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
+												<Label text="%label.group" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+												<Label text="%label.rol" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                                    <Label text="%label.activity" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" />
+                                    <CheckComboBox fx:id="checkComboBoxRole" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" />
+                                    <CheckComboBox fx:id="checkComboBoxGroup" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                                    <CheckComboBox fx:id="checkComboBoxActivity" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                                 </children>
+                              </GridPane>
+                           </top>
 								</BorderPane>
 								<TabPane fx:id="tabPane" minWidth="-Infinity" prefWidth="250.0" tabMinWidth="100.0">
 									<tabs>
