--- a/resources/css/chart.css
+++ b/resources/css/chart.css
@@ -140,3 +140,8 @@ input[type="button"][disabled] {
 	background-color:  #f2f2f2;
 	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 }
+
+.apexcharts{
+	font-weight: bold;
+	font-size: 14px;
+}
